# vppinrust

./: .gitignore  Cargo.toml  README.md  ruleset.md
.github/workflows/: rust-ci.yml
conformance/fixtures/c/: packet_stats_nominal.json
conformance/fixtures/rust/: packet_stats_nominal.json
crates/vpp-conformance/: Cargo.toml
crates/vpp-conformance/src/: main.rs
crates/vpp-controlplane/: Cargo.toml
crates/vpp-controlplane/src/: lib.rs
crates/vpp-core/: Cargo.toml
crates/vpp-core/src/: lib.rs
crates/vpp-interop/: Cargo.toml
crates/vpp-interop/src/: lib.rs
crates/vpp-runtime/: Cargo.toml
crates/vpp-runtime/src/: lib.rs
scripts/ci/: conformance.sh  rust-ci.sh
